serach compoent created

--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -40,7 +40,7 @@
         </div>
       </div>
       <div class="flex justify-between  mb-2 align-middle">
-        <div>Subtotale  <span>{{ getTotal() | currency }}</span></div>
+        <div>Subtotal <span>{{ getTotal() | currency }}</span></div>
         <a routerLink="/checkout" class="border px-11 rounded-lg py-2">Continues</a>
       </div>
     </div>
