--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -115,6 +115,8 @@
                 <img src="/assets/images/search.png" alt="Search" class="h-5 mr-1">
                 Research
               </a>
+              
+              <app-search></app-search>
             </li>
             <li class="group cart_nav relative z-10">
               <a routerLink="/cart" class="flex items-center text-light_black">
