--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
         </div>
       </div>
       <div class="home-slide-btn">
-        <button type="button" class="bg-black text-white text-base">FIND OUT NOW</button>
+        <button routerLink="/collections" type="button" class="bg-black text-white text-base">FIND OUT NOW</button>
       </div>
     </div>
 
@@ -28,7 +28,7 @@
             <h6>OUR PRODUCTS</h6>
             <p class="py-3">Explore our exclusive range of bags: from timeless classics to contemporary trends, each
               model is designed to suit every woman's unique style.</p>
-            <button class="w-4/5 bg-black  text-white py-2.5 rounded-lg">View all collections</button>
+            <button routerLink="/collections" class="w-4/5 bg-black  text-white py-2.5 rounded-lg">View all collections</button>
           </div>
         </div>
         <div class="flex mb-4">
@@ -36,7 +36,7 @@
             <h6>OUR PRODUCTS</h6>
             <p class="py-3">Explore our exclusive range of bags: from timeless classics to contemporary trends, each
               model is designed to suit every woman's unique style.</p>
-            <button class="w-4/5 bg-black  text-white py-2.5 rounded-lg">View all collections</button>
+            <button routerLink="/collections" class="w-4/5 bg-black  text-white py-2.5 rounded-lg">View all collections</button>
           </div>
           <div class="w-1/2 fc-items overflow-hidden"><img
               class="max-w-none transition duration-500 ease-in-out hover:scale-110" src="/assets/images/square2.png"
