--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -29,7 +29,8 @@
     </div>
     <div class="productdescription">
       <h2 class="text-3xl py-5">Description</h2>
-      <div class="text-lg" [innerHTML]="product.description"></div>
+      
+      <div class="text-lg" [innerHTML]="product?.description"></div>
       <h3 class="text-3xl py-3">Product Information</h3>
     </div>
   </div>
